--- a/portfolio.html
+++ b/portfolio.html
@@ -29,8 +29,8 @@
     </div>
 </header>
 <main>
-    <section>
-        <div class="container portfolio-container">
+    <section class="portfolio-section">
+        <div class="container">
         <h1 class="visually-hidden">Портфолио</h1>
         <ul class="list portfolio-button-list">
           <li><button type="button" class="button-portfolio current">Все</button></li>
